# ESP32-Debugger

./: .gitignore  ESP32_Debugger_Manual.md  README.md  sdkconfig
3D_Model/: 发送机底部.SLDPRT  发送机底部.STL  发送机顶盖.SLDPRT  发送机顶盖.STL  接收机底部.SLDPRT  接收机底部.STL  接收机顶盖.SLDPRT  接收机顶盖.STL
components/DAP/: CMakeLists.txt
components/DAP/Include/: DAP.h  DAP_config.h  cmsis_compiler.h  gpio_common.h  gpio_op.h  spi_switch.h
components/DAP/Source/: DAP.c  SWO.c  SW_DP.c  spi_op.c  spi_switch.c
components/DAP/cmsis-core/: cmsis_compiler.h
components/DAP/config/: DAP_config.h
components/Program/: CMakeLists.txt
components/Program/inc/: algo_extractor.h
components/USBIP/: CMakeLists.txt  usb_descriptor.h  usb_handle.c
components/espressif__esp_tinyusb/: tusb_msc_storage.c
components/espressif__esp_tinyusb/include/: tusb_msc_storage.h
components/webServer/: web_handler.cpp
html/: program.html  root.html
main/: CMakeLists.txt  DAP_handle.c  DAP_handle.h  cdc_uart.c  cdc_uart.h  dap_configuration.h  idf_component.yml  kcp_server.c  led.c  main.cpp  msc_disk.c  msc_disk.h  prog_data.h  programmer.cpp  programmer.h  tcp_netconn.c  tcp_server.c  uart_bridge.c  usb_desc.c  usbip_server.c  usbip_server.h  wifi_configuration.h  wifi_handle.c  wifi_handle.h  wifi_rssi_led.c  wifi_rssi_led.h
main/include/: dap_configuration.h  hal_gpio.h  main.h  wifi_configuration.h
project/CH554_Keil_proj/: Compound.C  Compound_Dev.uvgui.17814  Compound_Dev.uvopt  Compound_Dev.uvproj  compound.h  main.c
project/ESP32S3_IDF5_x_proj/: partitions.csv
(+36 files in other folders)
